miniextendr-macros/tests/ui/default_invalid_param_impl.stderr
error: defaults(...) references non-existent parameter(s): nonexistent, another
  --> tests/ui/default_invalid_param_impl.rs:10:12
   |
10 |     pub fn method(&self, x: i32) {}
   |            ^^^^^^
